name:                fish-lang
version:             0.1.0.0
synopsis:            AST for the fish (and hfish) language
-- description:         
license:             MIT
license-file:        LICENSE
-- author:              
-- maintainer:          
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Fish.Lang, Fish.Pretty
  -- other-modules:       
  other-extensions:    DeriveFunctor, DeriveGeneric
  build-depends:       base >=4.9 && <4.10, GenericPretty >= 1.2.1 && < 1.3, bytestring >= 0.10.8 && < 0.11
  default-language:    Haskell2010
  
