name:                fish-lang
version:             0.1.0.0
synopsis:            AST for the fish (and hfish) language
-- description:         
license:             MIT
license-file:        LICENSE
-- author:              
-- maintainer:          
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Fish.Lang, Fish.Lang.Pretty, Fish.Lang.Prim, Fish.Lang.Prim.Pretty, Fish.Untagged.Lang, Fish.Untagged.Pretty
  -- other-modules:       
  other-extensions:    DeriveFunctor, DeriveGeneric
  build-depends:       base >=4.9 && <4.11
  build-depends:       text >=1.2 && <1.3
  build-depends:       bytestring >= 0.10.8 && < 0.11
  build-depends:       GenericPretty >= 1.2.1 && < 1.3
  build-depends:       nfc-text >= 0.1.0 && < 0.2
  default-language:    Haskell2010
  
